--- a/src/scss/form-style.scss
+++ b/src/scss/form-style.scss
@@ -1,9 +1,9 @@
 body {
-  font-family: 'Arial', sans-serif;
+  font-family: 'Arial',Helvetica, sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #f8f9fa;
+  background-color: #a0cad0 ;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -67,7 +67,7 @@ label {
 }
 
 button:focus {
-  outline: 3px solid #42b983;
+  outline: 3px solid #42a5b9;
 }
 
 a {
