--- a/src/scss/form-style.scss
+++ b/src/scss/form-style.scss
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #a0cad0 ;
+  background-color: #b6a6c9 ;
 }
 
 h1, h2, h3, h4, h5, h6 {
