--- a/src/scss/form-style.scss
+++ b/src/scss/form-style.scss
@@ -20,7 +20,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 button {
-  background-color: #42b983;
+  background-color: #4a3058;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -30,7 +30,7 @@ button {
 }
 
 button:hover {
-  background-color: #369c71;
+  background-color: #4a3058;
 }
 
 input, select, textarea {
@@ -43,7 +43,7 @@ input, select, textarea {
 }
 
 input:focus, select:focus, textarea:focus {
-  border-color: #42b983;
+  border-color: #7372c6;
   outline: none;
 }
 
@@ -71,7 +71,7 @@ button:focus {
 }
 
 a {
-  color: #42b983;
+  color: #4e4794;
   text-decoration: none;
 }
 
